test/unittest/error/tst.DTRACEFLT_DIVZERO.div.r

-- @@stderr --
dtrace: error on enabled probe ID 3 (ID 1: dtrace:::BEGIN): divide-by-zero in action #1
